--- a/README
+++ b/README
@@ -247,10 +247,8 @@ DESCRIPTION
     See "Collection methods" for more information.
 
 COMPATIBILITY
-    Evented::Object versions 0.0 to 0.7 are entirely compatible - anything
-    that worked in version 0.0 or even compies of Evented::Object before it
-    was versioned also work in version 0.7; however, some recent changes
-    break the compatibility with these previous versions in many cases.
+    Although Evented::Object attempts to maintain compatibility for an
+    extended period of time, a number of exceptions do exist.
 
   Asynchronous improvements 1.0+
     Evented::Object 1.* series and above are incompatible with the former
@@ -708,6 +706,16 @@ Fire object methods
      if ($fire->stopper) {
          say 'Fire was stopped by '.$fire->stopper;
      }
+ 
+  $fire->exception
+    If the event was fired with the `safe` option, it is possible that an
+    exception occurred in one (or more if `fail_continue` enabled)
+    callbacks. This method returns the last exception that occurred or
+    `undef` if none did.
+
+     if (my $e = $fire->exception) {
+        say "Exception! $e";
+     }
 
   $fire->called($callback)
     If no argument is supplied, returns the number of callbacks called so
@@ -851,7 +859,7 @@ Aliases
 AUTHOR
     Mitchell Cooper <cooper@cpan.org>
 
-    Copyright E<copy> 2011-2013. Released under BSD license.
+    Copyright E<copy> 2011-2014. Released under BSD license.
 
     *   IRC: irc.notroll.net #k
 
